--- a/css/me.css
+++ b/css/me.css
@@ -53,24 +53,6 @@ main{
     display: flex;
 }
 
-img {
-    margin: 20px;
-    height: 300px;
-    width: 250px;
-    border-radius: 100%;
-}
-
-.me {
-    color: white;
-}
-
-p{
-    color: white;
-    margin-left: 300px;
-    width: 400px;
-    font-size: 30px;
-}
-
 @media screen and (max-width: 590px){
     header{
         font-size: 16px;
@@ -78,24 +60,40 @@ p{
 }
 
 @media screen and (max-width: 500px){
-    p{
-        font-size: 25px;
-        margin: 0px;
-       visibility: hidden;
-    }
-}
-
-@media screen and (max-width: 500px){
-    .hi p{
-        font-size: 25px;
-        margin: 0px;
-       visibility:visible
-    }
-}
-
-
-@media screen and (max-width: 500px){
     nav a{
         font-size: 25px;
+    }
+}
+
+.aboutme{
+display: flex;
+}
+
+
+img{
+    height: 400px;
+    border-radius: 50%;
+    margin-left: 10px;
+    margin-top: 30px;
+}
+
+.aboutme p{
+color: white;
+font-size: 50px;
+margin-left: 250px;
+width: 900px;
+}
+
+@media screen and (max-width: 500px){
+    .aboutme p{
+        font-size: 20px;
+        margin: 0;
+    }
+}
+
+@media screen and (max-width: 500px){
+    .aboutme img{
+        height: 300px;
+        margin: 0;
     }
 }
