--- a/css/me.css
+++ b/css/me.css
@@ -53,47 +53,83 @@ main{
     display: flex;
 }
 
-@media screen and (max-width: 590px){
-    header{
-        font-size: 16px;
-    }
-}
 
-@media screen and (max-width: 500px){
-    nav a{
-        font-size: 25px;
+@media screen and (max-width:650px) {
+    nav a {
+        font-size: 30px;
     }
-}
+}  
+
+@media screen and (max-width:650px) {
+    header h1 {
+        font-size: 50px;
+    }
+}  
+
+@media screen and (max-width:430px) {
+    nav  {
+        size: 30px;
+    }
+}  
+
+ @media screen and (max-width:499px) {
+    nav a {
+        font-size: 20px;
+    }
+}  
+
+
+@media screen and (max-width:499px) {
+    header h1 {
+        font-size: 20px;
+    }
+}  
 
 .aboutme{
 display: flex;
 }
 
 
-img{
-    height: 400px;
+.aboutme img{
+    height: 600px;
     border-radius: 50%;
     margin-left: 10px;
-    margin-top: 30px;
+    margin-top: 20px;
 }
 
 .aboutme p{
 color: white;
-font-size: 50px;
+font-size: 70px;
 margin-left: 250px;
 width: 900px;
 }
 
-@media screen and (max-width: 500px){
+@media screen and (max-width: 1400px){
+    .aboutme p{
+        font-size: 40px;
+        margin: 0;
+        margin-left: 15px;
+    }
+}
+
+@media screen and (max-width: 600px){
     .aboutme p{
         font-size: 20px;
+        margin: 0;
+        margin-left: 15px;
+    }
+}
+
+@media screen and (max-width: 1000px){
+    .aboutme img{
+        height: 400px;
         margin: 0;
     }
 }
 
 @media screen and (max-width: 500px){
     .aboutme img{
-        height: 300px;
+        height: 150px;
         margin: 0;
     }
 }
