--- a/css/random.css
+++ b/css/random.css
@@ -32,7 +32,7 @@ header h1::after{
 nav {
 display: flex;
 background-color: black;
-justify-content: space-around;
+justify-content: space-between;
 margin: 20px;
 }
 
@@ -96,22 +96,13 @@ p{
 
 @media screen and (max-width: 500px){
     nav a{
-        font-size: 29px;
+        font-size: 25px;
     }
 }
 
-.fa{
-color: red;
-margin-left: 0px;
-display: flex;
-justify-content: space-around;
-text-decoration: none;
-font-size: 120px;
-margin-top: 100px;
-}
-
-@media screen and (max-width: 500px){
-    .fa{
-        font-size: 70px;
-    }
-}
+ svg{
+    background-color: red;
+    height: 50px;
+    width: 60px;
+    border-radius: 5px;
+ }
