added contact info

--- a/css/contact.css
+++ b/css/contact.css
@@ -32,7 +32,7 @@ header h1::after{
 nav {
 display: flex;
 background-color: black;
-justify-content: space-around;
+justify-content: space-between;
 margin: 20px;
 }
 
@@ -96,7 +96,7 @@ p{
 
 @media screen and (max-width: 500px){
     nav a{
-        font-size: 29px;
+        font-size: 20px;
     }
 }
 
@@ -113,5 +113,12 @@ margin-top: 100px;
 @media screen and (max-width: 500px){
     .fa{
         font-size: 70px;
+    }
+}
+
+@media screen and (max-width: 500px){
+    nav a:hover{
+        font-size: 20px;
+        background-color: white;
     }
 }
