--- a/css/me.css
+++ b/css/me.css
@@ -133,3 +133,10 @@ width: 900px;
         margin: 0;
     }
 }
+
+@media screen and (max-width: 500px){
+    nav a:hover{
+        font-size: 20px;
+        background-color: white;
+    }
+}
